--- a/main-app/pom.xml
+++ b/main-app/pom.xml
@@ -26,6 +26,13 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.mycompany.refapp</groupId>
+      <artifactId>referenced-app</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>system</scope>
+      <systemPath>/home/edvard/sources/test/maven-app/referenced-app/target/referenced-app-1.0-SNAPSHOT.jar</systemPath>
+    </dependency>
   </dependencies>
 
   <build>
