--- a/main-app/pom.xml
+++ b/main-app/pom.xml
@@ -45,7 +45,8 @@
           <configuration>
             <mainClass>com.mycompany.app.App</mainClass>
           </configuration>
-        </plugin>      </plugins>
+      </plugin>      
+    </plugins>
     </pluginManagement>
   </build>
 </project>
